--- a/03_convopart2.ipynb
+++ b/03_convopart2.ipynb
@@ -966,7 +966,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 599
+          "height": 480
         },
         "id": "jfROVuXHTP6c",
         "outputId": "74ebba0b-fc86-41b2-d050-c59cbd59721b"
@@ -1091,25 +1091,120 @@
         "zip_ref.close()"
       ],
       "metadata": {
-        "id": "jXxt1yXxLPlm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jXxt1yXxLPlm",
+        "outputId": "672dc906-ec30-4a6b-daef-678a6db8ec87"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-09-10 01:43:18--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_all_data.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 64.233.182.207, 64.233.183.207, 173.194.193.207, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|64.233.182.207|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 519183241 (495M) [application/zip]\n",
+            "Saving to: ‘10_food_classes_all_data.zip’\n",
+            "\n",
+            "10_food_classes_all 100%[===================>] 495.13M  87.0MB/s    in 4.0s    \n",
+            "\n",
+            "2023-09-10 01:43:22 (124 MB/s) - ‘10_food_classes_all_data.zip’ saved [519183241/519183241]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from posixpath import dirname\n",
+        "import os\n",
+        "\n",
+        "for dirpath, dirnames, filenames in os.walk(\"10_food_classes_all_data\"):\n",
+        "  print(f\"there are {len(dirnames)} directories and {len(filenames)} files in the directory {dirpath}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jajCbUXwLPiz",
+        "outputId": "b4e72c54-97dc-4d05-c64b-1676e71f6851"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "there are 2 directories and 0 files in the directory 10_food_classes_all_data\n",
+            "there are 10 directories and 0 files in the directory 10_food_classes_all_data/train\n",
+            "there are 0 directories and 750 files in the directory 10_food_classes_all_data/train/pizza\n",
+            "there are 0 directories and 750 files in the directory 10_food_classes_all_data/train/hamburger\n",
+            "there are 0 directories and 750 files in the directory 10_food_classes_all_data/train/sushi\n",
+            "there are 0 directories and 750 files in the directory 10_food_classes_all_data/train/ice_cream\n",
+            "there are 0 directories and 750 files in the directory 10_food_classes_all_data/train/fried_rice\n",
+            "there are 0 directories and 750 files in the directory 10_food_classes_all_data/train/chicken_curry\n",
+            "there are 0 directories and 750 files in the directory 10_food_classes_all_data/train/steak\n",
+            "there are 0 directories and 750 files in the directory 10_food_classes_all_data/train/chicken_wings\n",
+            "there are 0 directories and 750 files in the directory 10_food_classes_all_data/train/ramen\n",
+            "there are 0 directories and 750 files in the directory 10_food_classes_all_data/train/grilled_salmon\n",
+            "there are 10 directories and 0 files in the directory 10_food_classes_all_data/test\n",
+            "there are 0 directories and 250 files in the directory 10_food_classes_all_data/test/pizza\n",
+            "there are 0 directories and 250 files in the directory 10_food_classes_all_data/test/hamburger\n",
+            "there are 0 directories and 250 files in the directory 10_food_classes_all_data/test/sushi\n",
+            "there are 0 directories and 250 files in the directory 10_food_classes_all_data/test/ice_cream\n",
+            "there are 0 directories and 250 files in the directory 10_food_classes_all_data/test/fried_rice\n",
+            "there are 0 directories and 250 files in the directory 10_food_classes_all_data/test/chicken_curry\n",
+            "there are 0 directories and 250 files in the directory 10_food_classes_all_data/test/steak\n",
+            "there are 0 directories and 250 files in the directory 10_food_classes_all_data/test/chicken_wings\n",
+            "there are 0 directories and 250 files in the directory 10_food_classes_all_data/test/ramen\n",
+            "there are 0 directories and 250 files in the directory 10_food_classes_all_data/test/grilled_salmon\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_dir_full = \"/content/10_food_classes_all_data/test/\"\n",
+        "test_dir_full = \"/content/10_food_classes_all_data/train/\"\n",
+        "\n",
+        "#lets get the class names\n",
+        "import pathlib\n",
+        "import numpy as np\n",
+        "\n",
+        "data_dir = pathlib.Path(train_dir_full)\n",
+        "class_name = np.array(sorted([item.name for item in data_dir.glob('*')]))\n",
+        "print(class_name)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CqwfSsJlLOf-",
+        "outputId": "20b6cd01-86d8-4704-f647-f5ef89e6c00a"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['chicken_curry' 'chicken_wings' 'fried_rice' 'grilled_salmon' 'hamburger'\n",
+            " 'ice_cream' 'pizza' 'ramen' 'steak' 'sushi']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "jajCbUXwLPiz"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "CqwfSsJlLOf-"
+        "id": "W7Rz_tc6wzI0"
       },
       "execution_count": null,
       "outputs": []
@@ -1118,9 +1213,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNpGurZyl80jslRABole1os",
+      "authorship_tag": "ABX9TyM/mIREnxAQFUR7FGVZOSo+",
       "include_colab_link": true
     },
     "kernelspec": {
