--- a/03_convopart2.ipynb
+++ b/03_convopart2.ipynb
@@ -1339,9 +1339,10 @@
         "    tf.keras.layers.Conv2D(10, 3, input_shape=(224,224,3)),\n",
         "    Activation(activation=\"relu\"),\n",
         "    tf.keras.layers.Conv2D(10, 3, activation=\"relu\"),\n",
-        "    tf.keras.layers.MaxPool2D(),\n",
+        "    tf.keras.layers.MaxPool2D(pool_size=(2, 2), padding='valid', strides=(2)),\n",
         "    tf.keras.layers.Conv2D(10, 3, activation=\"relu\"),\n",
         "    tf.keras.layers.Conv2D(10, 3, activation=\"relu\"),\n",
+        "    tf.keras.layers.MaxPool2D(pool_size=(2, 2), padding='valid', strides=(1, 1)),\n",
         "    tf.keras.layers.Flatten(),\n",
         "    tf.keras.layers.Dense(10, activation = \"softmax\") #we have 10 dense because we have 10 activation output neurons\n",
         "])\n",
@@ -1350,7 +1351,7 @@
         "                   loss = tf.keras.losses.categorical_crossentropy,\n",
         "                   metrics = [\"accuracy\"])\n",
         "\n",
-        "model_full.fit(train_data_full, epochs=5 ,\n",
+        "model_full.fit(train_data_full, epochs=10 ,\n",
         "               steps_per_epoch=len(train_data_full),\n",
         "               validation_data=test_data_full,\n",
         "               validation_steps=len(test_data_full)\n",
@@ -1361,35 +1362,45 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rIyrSqFoH1dw",
-        "outputId": "7c83fb58-3850-41fd-aad3-fdac3c6b8a17"
+        "outputId": "d04d98a9-d899-4337-d6c5-bd57a8a643c0"
       },
-      "execution_count": 17,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/5\n",
-            "235/235 [==============================] - 42s 127ms/step - loss: 2.1844 - accuracy: 0.2044 - val_loss: 2.0672 - val_accuracy: 0.2612\n",
-            "Epoch 2/5\n",
-            "235/235 [==============================] - 31s 133ms/step - loss: 1.9358 - accuracy: 0.3309 - val_loss: 1.9587 - val_accuracy: 0.3056\n",
-            "Epoch 3/5\n",
-            "235/235 [==============================] - 28s 121ms/step - loss: 1.5329 - accuracy: 0.4847 - val_loss: 2.0673 - val_accuracy: 0.3136\n",
-            "Epoch 4/5\n",
-            "235/235 [==============================] - 29s 125ms/step - loss: 0.6536 - accuracy: 0.7944 - val_loss: 2.8362 - val_accuracy: 0.2572\n",
-            "Epoch 5/5\n",
-            "235/235 [==============================] - 30s 126ms/step - loss: 0.0976 - accuracy: 0.9755 - val_loss: 4.3804 - val_accuracy: 0.2428\n"
+            "Epoch 1/10\n",
+            "235/235 [==============================] - 31s 122ms/step - loss: 2.2693 - accuracy: 0.1412 - val_loss: 2.2021 - val_accuracy: 0.1908\n",
+            "Epoch 2/10\n",
+            "235/235 [==============================] - 29s 123ms/step - loss: 2.0733 - accuracy: 0.2585 - val_loss: 2.0995 - val_accuracy: 0.2324\n",
+            "Epoch 3/10\n",
+            "235/235 [==============================] - 30s 129ms/step - loss: 1.5730 - accuracy: 0.4684 - val_loss: 2.1670 - val_accuracy: 0.2544\n",
+            "Epoch 4/10\n",
+            "235/235 [==============================] - 30s 128ms/step - loss: 0.8159 - accuracy: 0.7343 - val_loss: 2.9228 - val_accuracy: 0.2588\n",
+            "Epoch 5/10\n",
+            "235/235 [==============================] - 29s 124ms/step - loss: 0.2825 - accuracy: 0.9140 - val_loss: 4.1417 - val_accuracy: 0.2416\n",
+            "Epoch 6/10\n",
+            "235/235 [==============================] - 30s 129ms/step - loss: 0.1218 - accuracy: 0.9687 - val_loss: 5.6924 - val_accuracy: 0.2332\n",
+            "Epoch 7/10\n",
+            "235/235 [==============================] - 30s 126ms/step - loss: 0.0563 - accuracy: 0.9879 - val_loss: 5.9228 - val_accuracy: 0.2300\n",
+            "Epoch 8/10\n",
+            "235/235 [==============================] - 30s 126ms/step - loss: 0.0495 - accuracy: 0.9883 - val_loss: 6.4866 - val_accuracy: 0.2116\n",
+            "Epoch 9/10\n",
+            "235/235 [==============================] - 31s 133ms/step - loss: 0.0310 - accuracy: 0.9929 - val_loss: 7.3369 - val_accuracy: 0.2216\n",
+            "Epoch 10/10\n",
+            "235/235 [==============================] - 34s 145ms/step - loss: 0.0349 - accuracy: 0.9924 - val_loss: 7.5874 - val_accuracy: 0.2212\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7a133186aad0>"
+              "<keras.src.callbacks.History at 0x7a12b540e260>"
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 25
         }
       ]
     },
@@ -1397,33 +1408,237 @@
       "cell_type": "code",
       "source": [
         "#evaluate the model\n",
-        "model_full.evaluate(test_data_full)"
+        "model_full.evaluate(test_data_full)\n",
+        "\n",
+        "#reduce ovefitting by adjusting the hyperparameters"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DSnmr2wiK3PE",
-        "outputId": "2ff29424-6b18-4338-e67b-dd066fff87dd"
+        "outputId": "75916d12-a0c0-4b24-fecc-a4b877883b29"
       },
-      "execution_count": 18,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "79/79 [==============================] - 8s 101ms/step - loss: 4.3804 - accuracy: 0.2428\n"
+            "79/79 [==============================] - 7s 94ms/step - loss: 7.5874 - accuracy: 0.2212\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[4.3804426193237305, 0.24279999732971191]"
+              "[7.587363243103027, 0.22120000422000885]"
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#lets see the summary of the model first and lets see what can we edit from it\n",
+        "model_full.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N7IiMUXpOgzU",
+        "outputId": "065b6b2a-e6d7-46ba-dc41-4a8e409c61e6"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential_3\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " conv2d_16 (Conv2D)          (None, 222, 222, 10)      280       \n",
+            "                                                                 \n",
+            " activation_4 (Activation)   (None, 222, 222, 10)      0         \n",
+            "                                                                 \n",
+            " conv2d_17 (Conv2D)          (None, 220, 220, 10)      910       \n",
+            "                                                                 \n",
+            " max_pooling2d_4 (MaxPoolin  (None, 110, 110, 10)      0         \n",
+            " g2D)                                                            \n",
+            "                                                                 \n",
+            " conv2d_18 (Conv2D)          (None, 108, 108, 10)      910       \n",
+            "                                                                 \n",
+            " conv2d_19 (Conv2D)          (None, 106, 106, 10)      910       \n",
+            "                                                                 \n",
+            " max_pooling2d_5 (MaxPoolin  (None, 53, 53, 10)        0         \n",
+            " g2D)                                                            \n",
+            "                                                                 \n",
+            " flatten_3 (Flatten)         (None, 28090)             0         \n",
+            "                                                                 \n",
+            " dense_3 (Dense)             (None, 10)                280910    \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 283920 (1.08 MB)\n",
+            "Trainable params: 283920 (1.08 MB)\n",
+            "Non-trainable params: 0 (0.00 Byte)\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_full_1 = Sequential([\n",
+        "    tf.keras.layers.Conv2D(10, 3, activation=\"relu\", input_shape=(224,224,3)),\n",
+        "    tf.keras.layers.Conv2D(10, 3, activation=\"relu\"),\n",
+        "    tf.keras.layers.MaxPool2D(),\n",
+        "    tf.keras.layers.Conv2D(10, 3, activation=\"relu\"),\n",
+        "    tf.keras.layers.Conv2D(10, 3, activation = \"relu\"),\n",
+        "    Dense(256, activation=\"relu\"),\n",
+        "    tf.keras.layers.BatchNormalization(),\n",
+        "    tf.keras.layers.Dropout(0.5),\n",
+        "    tf.keras.layers.Flatten(),\n",
+        "    tf.keras.layers.Dense(10, activation = \"softmax\")\n",
+        "\n",
+        "])\n",
+        "\n",
+        "model_full_1.compile(loss=tf.keras.losses.categorical_crossentropy,\n",
+        "                     optimizer=tf.keras.optimizers.Adam(learning_rate=0.001),\n",
+        "                     metrics=[\"accuracy\"])\n",
+        "'''\n",
+        "model_full_1.fit(train_data_full, epochs=10,\n",
+        "                 steps_per_epoch=len(train_data_full),\n",
+        "                 validation_data=test_data_full,\n",
+        "                 validation_steps=len(test_data_full))\n",
+        "'''\n",
+        "\n",
+        "model_full_1.fit(train_data_full, epochs=10 ,\n",
+        "               steps_per_epoch=len(train_data_full),\n",
+        "               validation_data=test_data_full,\n",
+        "               validation_steps=len(test_data_full)\n",
+        "               )"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q-Og-epzSxkC",
+        "outputId": "f48042f3-2f9b-42fd-8d3c-b92516565261"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "235/235 [==============================] - 44s 169ms/step - loss: 2.9336 - accuracy: 0.1841 - val_loss: 2.5711 - val_accuracy: 0.1000\n",
+            "Epoch 2/10\n",
+            "235/235 [==============================] - 38s 163ms/step - loss: 1.5997 - accuracy: 0.4659 - val_loss: 9.1382 - val_accuracy: 0.1000\n",
+            "Epoch 3/10\n",
+            "235/235 [==============================] - 42s 177ms/step - loss: 0.3611 - accuracy: 0.8888 - val_loss: 19.2466 - val_accuracy: 0.1044\n",
+            "Epoch 4/10\n",
+            "235/235 [==============================] - 39s 165ms/step - loss: 0.0815 - accuracy: 0.9765 - val_loss: 29.0623 - val_accuracy: 0.1148\n",
+            "Epoch 5/10\n",
+            "235/235 [==============================] - 39s 167ms/step - loss: 0.0719 - accuracy: 0.9787 - val_loss: 32.8595 - val_accuracy: 0.1416\n",
+            "Epoch 6/10\n",
+            "235/235 [==============================] - 39s 165ms/step - loss: 0.1454 - accuracy: 0.9587 - val_loss: 13.2615 - val_accuracy: 0.1372\n",
+            "Epoch 7/10\n",
+            "235/235 [==============================] - 38s 163ms/step - loss: 0.2213 - accuracy: 0.9360 - val_loss: 29.8187 - val_accuracy: 0.1048\n",
+            "Epoch 8/10\n",
+            "235/235 [==============================] - 38s 163ms/step - loss: 0.1687 - accuracy: 0.9499 - val_loss: 19.4356 - val_accuracy: 0.1536\n",
+            "Epoch 9/10\n",
+            "235/235 [==============================] - 38s 164ms/step - loss: 0.1449 - accuracy: 0.9569 - val_loss: 26.4140 - val_accuracy: 0.1448\n",
+            "Epoch 10/10\n",
+            "235/235 [==============================] - 38s 163ms/step - loss: 0.1461 - accuracy: 0.9600 - val_loss: 45.7601 - val_accuracy: 0.1280\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.History at 0x7a12b5e83be0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_full_2 = Sequential([\n",
+        "    tf.keras.layers.Conv2D(10, 3, activation=\"relu\", input_shape=(224, 224, 3)),\n",
+        "    tf.keras.layers.MaxPool2D(),\n",
+        "    tf.keras.layers.Conv2D(10, 3, activation=\"relu\"),\n",
+        "    tf.keras.layers.MaxPool2D(),\n",
+        "    tf.keras.layers.Conv2D(10, 3, activation=\"relu\"),\n",
+        "    tf.keras.layers.MaxPool2D(),\n",
+        "    tf.keras.layers.Flatten(),\n",
+        "    tf.keras.layers.Dense(10, activation=\"softmax\")\n",
+        "])\n",
+        "\n",
+        "model_full_2.compile(loss=tf.keras.losses.categorical_crossentropy,\n",
+        "                     optimizer=tf.keras.optimizers.Adam(),\n",
+        "                     metrics=[\"accuracy\"])\n",
+        "\n",
+        "model_full_2.fit(train_data_full, epochs=10,\n",
+        "                 steps_per_epoch=len(train_data_full),\n",
+        "                 validation_data=test_data_full,\n",
+        "                 validation_steps=len(test_data_full))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UsVhUjXqYPTS",
+        "outputId": "96bdd3f8-d0dd-4a53-d401-51956bdb176f"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "235/235 [==============================] - 31s 123ms/step - loss: 2.1346 - accuracy: 0.2211 - val_loss: 2.0195 - val_accuracy: 0.2768\n",
+            "Epoch 2/10\n",
+            "235/235 [==============================] - 28s 118ms/step - loss: 1.9212 - accuracy: 0.3343 - val_loss: 1.8750 - val_accuracy: 0.3468\n",
+            "Epoch 3/10\n",
+            "235/235 [==============================] - 30s 128ms/step - loss: 1.8067 - accuracy: 0.3787 - val_loss: 1.9377 - val_accuracy: 0.3096\n",
+            "Epoch 4/10\n",
+            "235/235 [==============================] - 28s 120ms/step - loss: 1.6838 - accuracy: 0.4285 - val_loss: 1.8868 - val_accuracy: 0.3332\n",
+            "Epoch 5/10\n",
+            "235/235 [==============================] - 28s 118ms/step - loss: 1.4742 - accuracy: 0.5027 - val_loss: 1.8462 - val_accuracy: 0.3712\n",
+            "Epoch 6/10\n",
+            "235/235 [==============================] - 28s 118ms/step - loss: 1.2498 - accuracy: 0.5855 - val_loss: 1.9663 - val_accuracy: 0.3708\n",
+            "Epoch 7/10\n",
+            "235/235 [==============================] - 28s 121ms/step - loss: 1.0405 - accuracy: 0.6580 - val_loss: 2.1015 - val_accuracy: 0.3552\n",
+            "Epoch 8/10\n",
+            "235/235 [==============================] - 28s 120ms/step - loss: 0.8452 - accuracy: 0.7183 - val_loss: 2.4485 - val_accuracy: 0.3308\n",
+            "Epoch 9/10\n",
+            "235/235 [==============================] - 29s 122ms/step - loss: 0.6502 - accuracy: 0.7897 - val_loss: 2.7041 - val_accuracy: 0.3204\n",
+            "Epoch 10/10\n",
+            "235/235 [==============================] - 29s 125ms/step - loss: 0.5075 - accuracy: 0.8425 - val_loss: 3.3031 - val_accuracy: 0.3028\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.History at 0x7a12b642e890>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
         }
       ]
     },
@@ -1431,7 +1646,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "N7IiMUXpOgzU"
+        "id": "_Dza82dMccBe"
       },
       "execution_count": null,
       "outputs": []
@@ -1441,7 +1656,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM2mpYaqXVE971OSGbDFx9N",
+      "authorship_tag": "ABX9TyPGg2antpbme5JtWUXAD6R+",
       "include_colab_link": true
     },
     "kernelspec": {
