--- a/03_convopart2.ipynb
+++ b/03_convopart2.ipynb
@@ -1076,7 +1076,7 @@
       "metadata": {
         "id": "ClIxehxrLPqJ"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1097,7 +1097,7 @@
         "id": "jXxt1yXxLPlm",
         "outputId": "a9eb9b10-2ed4-42f6-e854-7a041517a8b0"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1134,7 +1134,7 @@
         "id": "jajCbUXwLPiz",
         "outputId": "d3c37b2c-9476-4d0a-c658-694acfba46e8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1188,7 +1188,7 @@
         "id": "CqwfSsJlLOf-",
         "outputId": "2012f610-56f3-4a2a-e452-2b845b902bf0"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1228,7 +1228,7 @@
       "metadata": {
         "id": "W7Rz_tc6wzI0"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1246,7 +1246,7 @@
         "id": "91kwP8ROx33M",
         "outputId": "ed608b94-b37e-4920-c34a-dcec5d720036"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1293,7 +1293,7 @@
       "metadata": {
         "id": "sTD_PFMJyEWZ"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1317,7 +1317,7 @@
         "id": "gxanWO6gGkkv",
         "outputId": "8dbe67d5-7afa-4766-ec4b-ce75c35af93d"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1364,7 +1364,7 @@
         "id": "rIyrSqFoH1dw",
         "outputId": "d04d98a9-d899-4337-d6c5-bd57a8a643c0"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1419,7 +1419,7 @@
         "id": "DSnmr2wiK3PE",
         "outputId": "75916d12-a0c0-4b24-fecc-a4b877883b29"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1453,7 +1453,7 @@
         "id": "N7IiMUXpOgzU",
         "outputId": "065b6b2a-e6d7-46ba-dc41-4a8e409c61e6"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1532,7 +1532,7 @@
         "id": "q-Og-epzSxkC",
         "outputId": "f48042f3-2f9b-42fd-8d3c-b92516565261"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1602,7 +1602,7 @@
         "id": "UsVhUjXqYPTS",
         "outputId": "96bdd3f8-d0dd-4a53-d401-51956bdb176f"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1643,6 +1643,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##fixing over fitting by augmenting the data"
+      ],
+      "metadata": {
+        "id": "nTgN6lpMe0eo"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
@@ -1656,7 +1665,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPGg2antpbme5JtWUXAD6R+",
+      "authorship_tag": "ABX9TyN7xMTr6qhlw0GW/EejgFIj",
       "include_colab_link": true
     },
     "kernelspec": {
