--- a/03_convopart2.ipynb
+++ b/03_convopart2.ipynb
@@ -1652,10 +1652,220 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "what is data augmentation?\n",
+        "\n",
+        "  it is like you can move or put zoom in or out on the picture that we have so that it can be recognized more by the machine\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "xIBp8OckRPDT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import zipfile\n",
+        "!wget https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_all_data.zip\n",
+        "\n",
+        "#unzip\n",
+        "zip_ref = zipfile.ZipFile(\"10_food_classes_all_data.zip\" , \"r\")\n",
+        "zip_ref.extractall()\n",
+        "zip_ref.close()\n",
+        "\n",
+        "\n",
+        "train_dir_full = \"/content/10_food_classes_all_data/train/\"\n",
+        "test_dir_full = \"/content/10_food_classes_all_data/test/\"\n",
+        "\n",
+        "#lets get the class names\n",
+        "import pathlib\n",
+        "import numpy as np\n",
+        "\n",
+        "data_dir = pathlib.Path(train_dir_full)\n",
+        "class_name = np.array(sorted([item.name for item in data_dir.glob('*')]))\n",
+        "print(class_name)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-GRLlGflRoah",
+        "outputId": "bfc6ce59-8e9f-4515-a2dc-49f8a0daf7c1"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-10-24 20:17:47--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_all_data.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 209.85.234.207, 142.251.172.207, 108.177.112.207, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|209.85.234.207|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 519183241 (495M) [application/zip]\n",
+            "Saving to: ‘10_food_classes_all_data.zip.1’\n",
+            "\n",
+            "10_food_classes_all 100%[===================>] 495.13M  67.6MB/s    in 7.3s    \n",
+            "\n",
+            "2023-10-24 20:17:55 (68.1 MB/s) - ‘10_food_classes_all_data.zip.1’ saved [519183241/519183241]\n",
+            "\n",
+            "['chicken_curry' 'chicken_wings' 'fried_rice' 'grilled_salmon' 'hamburger'\n",
+            " 'ice_cream' 'pizza' 'ramen' 'steak' 'sushi']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#preprocess the data\n",
+        "\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "from tensorflow.keras.layers import Dense, Flatten, Conv2D, MaxPool2D, Activation\n",
+        "from tensorflow.keras import Sequential\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "\n",
+        "\n",
+        "train_datagen = ImageDataGenerator(rescale=1/255.)\n",
+        "test_datagen = ImageDataGenerator(rescale=1/255.)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "meTakt19R6wR"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_dir_full = \"/content/10_food_classes_all_data/train/\"\n",
+        "test_dir_full = \"/content/10_food_classes_all_data/test/\"\n",
+        "\n",
+        "#first create an augmented data\n",
+        "train_datagen_augmented = ImageDataGenerator(rescale=1/255.,\n",
+        "                                             rotation_range=0.2,\n",
+        "                                             width_shift_range=0.2,\n",
+        "                                             height_shift_range=0.2,\n",
+        "                                             zoom_range=0.2,\n",
+        "                                             horizontal_flip=True)\n",
+        "#load data from the directory into batches\n",
+        "train_datafull1 = train_datagen_augmented.flow_from_directory(directory=train_dir_full,\n",
+        "                                                   target_size=(224,224),\n",
+        "                                                   class_mode=\"categorical\",\n",
+        "                                                   batch_size=32)\n",
+        "\n",
+        "test_data_full1 = test_datagen.flow_from_directory(directory=test_dir_full,\n",
+        "                                                   target_size=(224,224),\n",
+        "                                                   class_mode=\"categorical\",\n",
+        "                                                   batch_size=32)\n"
+      ],
+      "metadata": {
+        "id": "_Dza82dMccBe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3788131b-d210-41d9-f358-89107a367d1d"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 7500 images belonging to 10 classes.\n",
+            "Found 2500 images belonging to 10 classes.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from keras.src.optimizers import optimizer\n",
+        "#create a model baseline\n",
+        "  #remember we are working on 10 different classes\n",
+        "model_10 = Sequential([\n",
+        "    Conv2D(10, (3, 3), input_shape=(224, 224, 3), activation=\"relu\"),\n",
+        "    Conv2D(10, (3, 3), activation=\"relu\"),\n",
+        "    MaxPool2D(pool_size=(2, 2), padding='valid', strides=(2)),\n",
+        "    Conv2D(10, (3, 3), activation=\"relu\"),\n",
+        "    Conv2D(10, (3, 3), activation=\"relu\"),\n",
+        "    MaxPool2D(pool_size=(2, 2), padding='valid', strides=(1, 1)),\n",
+        "    Flatten(),\n",
+        "    Dense(10, activation=\"softmax\")\n",
+        "])\n",
+        "\n",
+        "model_10.compile(optimizer = tf.keras.optimizers.Adam(),\n",
+        "                   loss = tf.keras.losses.categorical_crossentropy,\n",
+        "                   metrics = [\"accuracy\"])\n",
+        "\n",
+        "\n",
+        "\n",
+        "history_10 = model_10.fit(train_datafull1, epochs=10 ,\n",
+        "               steps_per_epoch=len(train_datafull1),\n",
+        "               validation_data=test_data_full1,\n",
+        "               validation_steps=len(test_data_full1)\n",
+        "               )\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8esDyRQdRoX6",
+        "outputId": "c4d6c772-83ac-49ef-87ea-26c129f3afc7"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "235/235 [==============================] - 129s 498ms/step - loss: 2.1743 - accuracy: 0.2121 - val_loss: 1.9857 - val_accuracy: 0.2940\n",
+            "Epoch 2/10\n",
+            "235/235 [==============================] - 107s 452ms/step - loss: 2.0395 - accuracy: 0.2788 - val_loss: 1.8661 - val_accuracy: 0.3516\n",
+            "Epoch 3/10\n",
+            "235/235 [==============================] - 111s 470ms/step - loss: 1.9760 - accuracy: 0.3089 - val_loss: 1.8538 - val_accuracy: 0.3612\n",
+            "Epoch 4/10\n",
+            "235/235 [==============================] - 109s 462ms/step - loss: 1.9530 - accuracy: 0.3225 - val_loss: 1.7887 - val_accuracy: 0.3828\n",
+            "Epoch 5/10\n",
+            "235/235 [==============================] - 110s 469ms/step - loss: 1.9058 - accuracy: 0.3364 - val_loss: 2.0561 - val_accuracy: 0.3312\n",
+            "Epoch 6/10\n",
+            "235/235 [==============================] - 110s 468ms/step - loss: 1.8844 - accuracy: 0.3484 - val_loss: 1.7842 - val_accuracy: 0.3936\n",
+            "Epoch 7/10\n",
+            "235/235 [==============================] - 106s 450ms/step - loss: 1.8518 - accuracy: 0.3663 - val_loss: 1.6712 - val_accuracy: 0.4384\n",
+            "Epoch 8/10\n",
+            "235/235 [==============================] - 108s 459ms/step - loss: 1.8120 - accuracy: 0.3771 - val_loss: 1.6304 - val_accuracy: 0.4544\n",
+            "Epoch 9/10\n",
+            "235/235 [==============================] - 116s 492ms/step - loss: 1.7943 - accuracy: 0.3933 - val_loss: 1.6719 - val_accuracy: 0.4284\n",
+            "Epoch 10/10\n",
+            "235/235 [==============================] - 114s 484ms/step - loss: 1.7507 - accuracy: 0.3959 - val_loss: 1.6780 - val_accuracy: 0.4536\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.History at 0x789acda96e60>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "_Dza82dMccBe"
+        "id": "8AKhbVnEROmq"
       },
       "execution_count": null,
       "outputs": []
@@ -1665,7 +1875,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN7xMTr6qhlw0GW/EejgFIj",
+      "authorship_tag": "ABX9TyMT0jfrlIl2EaRvZm0QYqHr",
       "include_colab_link": true
     },
     "kernelspec": {
