--- a/03_convopart2.ipynb
+++ b/03_convopart2.ipynb
@@ -1862,10 +1862,80 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##improve till its better"
+      ],
+      "metadata": {
+        "id": "WyNbD7bLeot6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#preprocess the data\n",
+        "\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "from tensorflow.keras.layers import Dense, Flatten, Conv2D, MaxPool2D, Activation\n",
+        "from tensorflow.keras import Sequential\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "\n",
+        "\n",
+        "train_datagen = ImageDataGenerator(rescale=1/255.)\n",
+        "test_datagen = ImageDataGenerator(rescale=1/255.)\n",
+        "\n",
+        "train_dir_full = \"/content/10_food_classes_all_data/train/\"\n",
+        "test_dir_full = \"/content/10_food_classes_all_data/test/\"\n"
+      ],
+      "metadata": {
+        "id": "8AKhbVnEROmq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "8AKhbVnEROmq"
+        "id": "yhqEQoTneoeW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "BTZCNf79eocL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "n8jt6ZqpeoZt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "zm1bjZLveoXG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "plorPA_seoUc"
       },
       "execution_count": null,
       "outputs": []
@@ -1875,7 +1945,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMT0jfrlIl2EaRvZm0QYqHr",
+      "authorship_tag": "ABX9TyM7gM1Vc4ZIGNzDltt2GdEK",
       "include_colab_link": true
     },
     "kernelspec": {
